# qt_calculator

./: .gitignore  CMakeLists.txt  Makefile  README.md  appcontroller.cpp  appcontroller.h  expresion_checker.cpp  main.cpp  resources.qrc  rpn.cpp  rpn.h  rpncalc.cpp  rpncalc.h  stack.cpp  stack.h
include/: rpncalc.h  stack.h  undoredo.h
rpn/: CMakeLists.txt
rpn/include/rpn/: rpn.h  stack.h  tokenizer.h  undoredo.h
rpn/src/: rpn.cpp  rpncalc.cpp  tokenizer.cpp  undoredo.cpp
rpn/test/: rpn.cpp
rpn/tests/: CMakeLists.txt  funciones.cpp  test_rpn.cpp  test_undoredo.cpp  unittest_convertir_postfija.cpp  unittest_evaluar_postfija.cpp  unittest_funciones.cpp  unittest_parenthesis.cpp  unittest_undoredo.cpp
src/: appcontroller.cpp  appcontroller.h  appview.h  main.cpp  rpn.cpp  undoredo.cpp
src/controller/: appcontroller.cpp  appcontroller.h
src/view/: appview.cpp  appview.h
styles/: style.qss
test/: Makefile  undoredo.cpp
